--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Times New Roman', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 12px;
     max-width: 960px;
     margin: auto;
@@ -21,6 +21,14 @@ h3 {
     padding-bottom: 1em;
 }
 
+<main>
+    <article>
+        Contact info
+    </article>
+    <article>
+        About you & experience
+    </article>
+</main>
 main { 
     display: grid;
     grid-template-columns: 40% 60%;
