--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 }
 h1 {
     font-size: 3em;
-    letter-spacing: .6em;
+    letter-spacing: .2em;
     padding-top: 1em;
     padding-bottom: 1em;
 }
@@ -55,4 +55,7 @@ h1, h2, h3 {
 }
 #mainLeft {
     border-right: 1px solid lightgray;
+}
+a{
+    text-decoration: none;
 }
